--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
-        <!-- Startscreen -->
+        <!-- ✅ StartActivity ist jetzt die Haupt- und Launcher-Aktivität -->
         <activity
-            android:name="at.aau.serg.sdlapp.StartActivity"
+            android:name="at.aau.serg.sdlapp.ui.StartActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.MyApplication"
@@ -30,23 +30,17 @@
             </intent-filter>
         </activity>
 
+        <!-- Einstellungen -->
         <activity
-            android:name="at.aau.serg.sdlapp.SettingsActivity"
+            android:name="at.aau.serg.sdlapp.ui.SettingsActivity"
             android:exported="false"
             android:label="Einstellungen"
             android:screenOrientation="landscape"
             android:theme="@style/Theme.MyApplication" />
 
+        <!-- Spielbrett -->
         <activity
-            android:name="at.aau.serg.sdlapp.MainActivity"
-            android:exported="false"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.MyApplication"
-            android:screenOrientation="landscape" />
-
-        <!-- ✅ NEU: Spielbrett-Activity -->
-        <activity
-            android:name="at.aau.serg.sdlapp.BoardActivity"
+            android:name="at.aau.serg.sdlapp.ui.BoardActivity"
             android:exported="false"
             android:label="Spielbrett"
             android:screenOrientation="landscape"
