--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,11 @@
             android:label="@string/app_name"
             android:theme="@style/Theme.MyApplication"
             android:screenOrientation="landscape" />
+        <activity android:name=".WheelActivity"
+            tools:ignore="Instantiatable"
+            android:exported="false"
+            android:label = "Gluecksrad"
+            android:screenOrientation="landscape"/>
 
 
     </application>
