--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,10 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
+
         <!-- Startscreen im Querformat -->
         <activity
-            android:name="at.aau.serg.sdlapp.StartActivity"
+            android:name="at.aau.serg.sdlapp.ui.StartActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.MyApplication"
@@ -31,11 +32,12 @@
         </activity>
 
         <activity
-            android:name="at.aau.serg.sdlapp.SettingsActivity"
+            android:name="at.aau.serg.sdlapp.ui.SettingsActivity"
             android:exported="false"
             android:label="Einstellungen"
             android:screenOrientation="landscape"
-            android:theme="@style/Theme.MyApplication" />
+            android:theme="@style/Theme.MyApplication"
+            tools:ignore="MissingClass" />
 
         <!-- Spielbildschirm ebenfalls im Querformat -->
         <activity
@@ -43,7 +45,15 @@
             android:exported="false"
             android:label="@string/app_name"
             android:theme="@style/Theme.MyApplication"
-            android:screenOrientation="landscape" />
+            android:screenOrientation="landscape"
+            tools:ignore="MissingClass" />
+
+        <activity
+            android:name=".ui.PlayerStatsActivity"
+            android:exported="false"
+            android:label="Spielerübersicht"
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.MyApplication" />
 
 
     </application>
