--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="at.aau.serg.sdlapp">  <!-- ✅ HIER eingefügt -->
+    package="at.aau.serg.sdlapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -44,7 +44,7 @@
             android:name="at.aau.serg.sdlapp.MainActivity"
             android:exported="false"
             android:label="@string/app_name"
-            android:theme="@style/Theme.MyApplication"
+            android:theme="@style/Theme.SDLApp.Splash"
             android:screenOrientation="landscape"
             tools:ignore="MissingClass" />
 
