--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
 
         <activity
             android:name=".ui.PlayerStatsActivity"
-            android:exported="false"
+            android:exported="true"
             android:label="Spielerübersicht"
             android:screenOrientation="landscape"
             android:theme="@style/Theme.MyApplication" />
