Endscreenactivity in der AndroidManifest.xml hinzugefügt, nun sollte der Endscreen auch wirklich bei Feld 119 bzw 134 aufgerufen werden

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -135,6 +135,14 @@
             android:screenOrientation="landscape"
             android:theme="@style/Theme.MyApplication" />
 
+        <!-- ✅ Endscreen Activity -->
+        <activity
+            android:name="at.aau.serg.sdlapp.ui.activity.EndScreenActivity"
+            android:exported="false"
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.MyApplication" />
+
+
     </application>
 
 </manifest>
