Android Manifest Merge Cinflict gesolved

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -142,6 +142,14 @@
             android:screenOrientation="landscape"
             android:theme="@style/Theme.MyApplication" />
 
+        <!-- ✅ Wheel Activity -->
+        <activity
+            android:name="at.aau.serg.sdlapp.ui.activity.WheelActivity"
+            android:exported="false"
+            android:label="Glücksrad"
+            android:screenOrientation="landscape"
+            android:theme="@style/Theme.MyApplication" />
+
 
     </application>
 
